	  CentOS 5.5 and older Fedora).
	* No longer require libstartup-notification for startup notification
	  support.  GTK+ has included support for years, so use it instead. (David
	  Benjamin) (#13245)

	AIM:
	* Fix a bug where some buddies from your buddy list might not show up.
	  Affected non-English ICQ users the most. (#13386)

	MSN:
	* Fix bug that prevented added buddies to your buddy list in certain
	  circumstances.  (#13298)

	XMPP:
	* Fix building on platforms with an older glib (inadvertantly broken in
	  2.7.10).  (#13329)
	* Don't treat the on-join status storms as 'new arrivals'.  (Thijs
	  Alkemade) (#a14527)
	* Extend the /join command to support room JIDs, enabling you to join
	  a room on any server.  (Solarius, Matěj Cepl, Tirtha 'wyuka'
	  Chatterjee) (#4526)
	* Add support for receiving a limited amount of history when joining a
	  room (not currently supported by Pidgin and Finch).  (Thijs Alkemade)
	  (#10986, #a14219)

version 2.7.10 (02/06/2011):
	General:
	* Force video sources to all have the same capabilities.  This reduces the
	  number of times video must be scaled down, saving CPU time. (Jakub Adam)
	  (half of #13095)
	* Starting multiple video calls and ending one no longer causes the other
	  calls to stop sending audio and video. (Jakub Adam) (#12758, #13237)
	* Perl bindings now respect LDFLAGS. (Peter Volkov, Markos Chandras)
	  (#12638)
	* Added AddTrust External Root CA.  (#11554)
	* Resolve some issues validating X.509 certificates signed off the CAcert
	  Class 3 intermediate cert when using the GnuTLS SSL/TLS plugin.

	Gadu-Gadu:
	* Don't drop whole messages when text is colored. (Jan Zachorowski)
	  (#13259)

	Groupwise:
	* Don't show two windows when using "Get Info" on a buddy. (Gabriel Burt;
	  Novell, Inc.) (#13108)

	IRC:
	* Don't send ISON messages longer than 512 bytes. (Jeffrey Honig) (#9692)

	libpurple:
	* Stop sending audio when placing a call on hold. (Jakub Adam) (#13032)